--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <p>pro tip! after a successful transpilation, make sure to copy the WHOLE output, even a single character missing can mess things up!</p>
     <p>pro tip! use compact transpilation when you are sure that the output wont be modified by hand!</p>
     <hr>
+    <p style="font-size: larger; text-align: center;"><a href="javascript:void(0);" onclick="document.getElementById('code').value = EXAMPLE_FILE">[example]</a></p>
     <div id="code-holder">
         <textarea id="code-numbers"></textarea>
         <textarea id="code" oninput="genNumbers()" onchange="genNumbers()" placeholder=";; place your .bcm file here"></textarea>
